[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "diet"
description = "Diet planning tool"
authors = [
    {name="Wessel Bruinsma", email="wessel.p.bruinsma@gmail.com"},
]
license = {text="MIT"}
readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.8"
dependencies = [
    "wbml",
    "getch",
]

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest>=6",
    "pytest-cov",
    "coveralls",
    "pre-commit",
    "IPython",
    "black==23.7.0",
    "ghp-import",
    "wheel",
    "build",
    "tox",
    "jupyter-book",
    "mypy",
    "pyright",
]

[project.urls]
repository = "https://github.com/wesselb/diet"

[tool.hatch.build]
include = ["diet*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "diet/_version.py"

# Tests:

[tool.coverage.run]
branch = true
command_line = "-m pytest --verbose test"
source = ["diet"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# Formatting tools:

[tool.black]
line-length = 88
target-version = ["py38", "py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["diet", "tests"]
